RESOLVED FIXED236987
Authenticated encryption console logging causing performance regressions
https://bugs.webkit.org/show_bug.cgi?id=236987
Summary Authenticated encryption console logging causing performance regressions
Kate Cheney
Reported 2022-02-21 11:37:15 PST
Authenticated encryption console logging causing performance regressions
Attachments
Patch (36.13 KB, patch)
2022-02-21 11:39 PST, Kate Cheney
no flags
Patch (41.37 KB, patch)
2022-02-21 13:06 PST, Kate Cheney
no flags
Kate Cheney
Comment 1 2022-02-21 11:39:57 PST
Kate Cheney
Comment 2 2022-02-21 11:40:33 PST
Chris Dumez
Comment 3 2022-02-21 11:54:05 PST
Comment on attachment 452751 [details] Patch r=me
Kate Cheney
Comment 4 2022-02-21 12:43:32 PST
Looks like I missed updating expectations for a few GTK tests, will fix those.
Kate Cheney
Comment 5 2022-02-21 13:06:45 PST
Kate Cheney
Comment 6 2022-02-22 07:24:32 PST
Comment on attachment 452760 [details] Patch Build and test failures are unrelated.
Jonathan Bedard
Comment 7 2022-02-22 07:27:31 PST
3 failures in https://ews-build.webkit.org/#/builders/70/builds/967 are known and resolved by a revert this morning.
Kate Cheney
Comment 8 2022-02-22 09:37:07 PST
Comment on attachment 452760 [details] Patch iOS test failure seems quite unrelated, trying cq again
EWS
Comment 9 2022-02-22 11:00:20 PST
Committed r290319 (247641@main): <https://commits.webkit.org/247641@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452760 [details].
Note You need to log in before you can comment on or make changes to this bug.