Authenticated encryption console logging causing performance regressions https://bugs.webkit.org/show_bug.cgi?id=236987 <rdar://problem/89108253>

Reviewed by Chris Dumez.

Source/WebCore:

No new tests. Behavior confirmed by existing crypto/subtle tests.

For clients that use repeated unauthenticated AES encryption, console
logging may cause perf issues. We should log the authenticated
encryption warning once per context.

* crypto/SubtleCrypto.cpp:
(WebCore::SubtleCrypto::addAuthenticatedEncryptionWarningIfNecessary):
* dom/ScriptExecutionContext.h:
(WebCore::ScriptExecutionContext::hasLoggedAuthenticatedEncryptionWarning const):
(WebCore::ScriptExecutionContext::setHasLoggedAuthenticatedEncryptionWarning):

LayoutTests:

* crypto/subtle/aes-cbc-cfb-decrypt-malformed-parameters-expected.txt:
* crypto/subtle/aes-cbc-cfb-encrypt-malformed-parameters-expected.txt:
* crypto/subtle/aes-cbc-generate-key-encrypt-decrypt-expected.txt:
* crypto/subtle/aes-cbc-import-key-decrypt-expected.txt:
* crypto/subtle/aes-cbc-import-key-encrypt-expected.txt:
* crypto/subtle/aes-ctr-encrypt-malformed-parameters-expected.txt:
* crypto/subtle/aes-ctr-generate-key-encrypt-decrypt-expected.txt:
* crypto/subtle/aes-ctr-import-key-encrypt-expected.txt:
* platform/glib/crypto/subtle/aes-cbc-cfb-decrypt-malformed-parameters-expected.txt:
* platform/glib/crypto/subtle/aes-cbc-cfb-encrypt-malformed-parameters-expected.txt:



Canonical link: https://commits.webkit.org/247641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290319 268f45cc-cd09-0410-ab3c-d52691b4dbfc